--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: 15
-    - run: npm install
+    - run: npm ci
     - run: npm run test
 
   push_build:
@@ -25,6 +25,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
+      with:
+        node-version: 15
     - run: npm ci
     - run: npm run build
     - uses: BetaHuhn/do-spaces-action@13515d126a67967c7f9d171670a8fc54a58d2cd2
