--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,21 +7,21 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 15
-    - run: npm ci
-    - run: npm run test
+  # test:
+  #   name: Run Tests
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - uses: actions/setup-node@v2
+  #     with:
+  #       node-version: 15
+  #   - run: npm ci
+  #   - run: npm run test
 
   push_build:
     name: Push build directory to S3-compliant storage service
     runs-on: ubuntu-latest
-    needs: [test]
+    # needs: [test]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
